preview button feature for the reorderable list

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
     <div class="reorderable-list">
         <h2>Reorderable List</h2>
         <ul id="reorderable-list">
-            <li class="list-item" draggable="true">Item 1</li>
-            <li class="list-item" draggable="true">Item 2</li>
-            <li class="list-item" draggable="true">Item 3</li>
-            <li class="list-item" draggable="true">Item 4</li>
+            <li class="list-item" id="item1" draggable="true">Item 1</li>
+            <li class="list-item" id="item2" draggable="true">Item 2</li>
+            <li class="list-item" id="item3" draggable="true">Item 3</li>
+            <li class="list-item" id="item4" draggable="true">Item 4</li>
         </ul>
     </div>
+
+    <button id="previewButton">Preview Swap</button>
 
     <div class="modal" id="modal">
         <div class="modal-content">
